--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,8 @@ section.section6{
     box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
 }
 .bodyplaceholder{
-    text-align: left;
-    background-image: url(./img/construtor.jpg);
+    text-align: center;
+    background-image: -webkit-linear-gradient(rgb(127, 187, 255), #45F0DF);
     background-size: cover;
 }
 section.section7{
