--- a/css/style.css
+++ b/css/style.css
@@ -268,3 +268,18 @@ footer{
     background-color: #334195;
     border-top: 2px solid #45F0DF ;
 }
+
+.main{
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    flex-direction: column;
+}
+
+.main p{
+    text-align: justify;
+}
+
+.sobre-mim{
+    max-width: 30%;
+}
