--- a/css/style.css
+++ b/css/style.css
@@ -1,281 +1,490 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Barlow', sans-serif;
-}
-@media only screen and (max-width: 600px){
-    div.a{
-        max-width: 180px;
-    }
-}
-@media only screen and (max-width:360px){
-    nav{
-        max-width: 240px;
-    }
-    h1.title{
-        font-size: 48px;
-    }
-}
-div.a{
-    background-color: rgb(255, 255, 255);
-    height: 6px;
-    width: 360px;
-    margin-left: auto;
-    margin-right: auto;
-}
-h1.title{
-    color: rgb(255, 255, 255);
-    font-size: 64px;
-    font-family: 'Barlow', sans-serif;
-}
-h3.title{
-    color: rgb(255, 255, 255);
-    font-size: 24px;
-    font-weight: 200;
-    font-family: 'Barlow', sans-serif;
-}
-header{
-    text-align: center;
-    background-color: #334195;
-    height: 240px;
-    border-bottom: 3px solid #45F0DF;
-    box-shadow: 0 0 1em rgb(44 44 44 / 65%)
-}
-nav{
-    margin-top: 16px;
-    width: 320px;
-    height:35px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(127, 187, 255);
-    border-top: 4px solid #45F0DF;
-    border-left: 4px solid #45F0DF;
-    border-right: 4px solid #45F0DF;
-    border-radius: 12px;
-    border-bottom: 4px solid #45F0DF;
-}
-nav:hover{
-    margin-top: 16px;
-    width: 320px;
-    height:35px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(127, 187, 255);
-    border-top: 4px solid #45F0DF;
-    border-left: 4px solid #45F0DF;
-    border-right: 4px solid #45F0DF;
-    border-radius: 12px;
-    border-bottom: 4px solid #45F0DF;
-}
-.materias{
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-section{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/humanas.jpg);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
-}
-section.section2{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/natureza.jpg);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
-}
-section.section3{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/linguagens.jpg);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
-}
-section.section4{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/matematica.jpg);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
-}
-section.section5{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/modulointegrador.png);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
-}
-section.section6{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/ativ.jpg);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
+@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-section.section7{
-    border: 3px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    height: 220px;
-    width: 320px;
-    background-image: url(img/F.jpg);
-    background-size: cover;
-    margin: 0 auto;
-    margin-bottom: 12px;
-    box-shadow: 6px 6px 24px .2px rgba(0, 0, 0 , 0.309);
-}
-section:hover{
-    box-shadow: 6px 6px 24px .5px rgba(0, 255, 0, 0.486);
-    border: 3px solid rgb(3, 146, 3);
-    transition: .5s;
-}
-h2#titleS{
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    border-top-left-radius: 22px;
-    border-top-right-radius: 22px;
-    font-family: 'Barlow', sans-serif;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
+html[data-theme=light] {
+  --bg-color: #fafafa;
+  --bg-color2: #e8dcdc;
+  --cor-texto: #000;
+  --cor-highlight: #6E44FF;
 }
 
-h2#titleS:visited{
-    text-decoration: underline;
-    color: rgb(0, 0, 0);
+html[data-theme=dark] {
+  --bg-color: #121212;
+  --bg-color2: #262626;
+  --cor-texto: #fff;
+  --cor-highlight: #6E44FF;
 }
 
-#img{
-    background-image: url(./img/github.png);
-    background-size: cover;
-    border-top-left-radius: 22px;
-    border-bottom-left-radius: 22px;
-    margin-top: -107px;
-    width: 120px;
-    height: 120px;
-    border-right: 3px solid #45F0DF;
-}
-.texto-lateral{
-    color: rgba(112, 110, 110, 0.541);
-    font-weight: 600;
-    font-style: italic;
-    font-size: 10px;
-    margin-left: 200px;
-    
-    width: 100px;
-}
-#cardIndexTxt{
-    font-weight: 700;
-    margin-left: 90px;
-}
-#cardIndex{
-    text-align: center;
-    margin-top: 36px;
-    color: rgb(0, 0, 0);
-    width:320px;
-    height: 120px;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid rgb(112, 110, 110);
-    border-radius: 24px;
-    box-shadow: 6px 4px 32px .2em rgba(112, 110, 110, 0.301);
-}
-#cardIndex:hover{
-    box-shadow: 6px 4px 32px .2em rgba(3, 39, 94, 0.623);
-    transition: .7s;
-    border: 2px solid rgb(0, 0, 0);
-}
-#active{
-    text-decoration: underline rgb(255, 153, 0);   
-}
-#img1{
-    background-image: url(./img/linkedin.png);
-    background-size: cover;
-    border-top-left-radius: 22px;
-    border-bottom-left-radius: 22px;
-    margin-top: -107px;
-    width: 120px;
-    height: 120px;
-    border-right: 3px solid #45F0DF;
+body {
+  background: var(--bg-color);
+  font-family: "Mulish", sans-serif;
+  color: var(--cor-texto);
+  transition: background 0.4s cubic-bezier(0.08, 0.6, 0.66, 0.9);
 }
 
-.linkcard{
-    color: #334195;
+.header {
+  display: flex;
+  place-items: center;
+  width: 100%;
+  height: 5rem;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
 }
-.linkcard:visited{
-    color: #334195;
+.header .titles {
+  width: 33%;
+  font-family: "Zen Dots";
+  padding-left: 12px;
+  font-size: 1.3rem;
 }
-.linkcard:hover{
-    color: rgb(255, 153, 0);
-    transition: .3s;
+.header .titles h1 {
+  color: var(--cor-highlight);
+}
+.header .menu {
+  vertical-align: center;
+  text-align: center;
+  width: 33%;
+}
+.header .menu ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+.header .menu ul li a {
+  position: relative;
+  color: var(--cor-texto);
+  font-size: 1.2rem;
+  font-weight: 400;
+  padding: 6px 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.1s;
+}
+.header .menu ul li a::after {
+  content: "";
+  position: absolute;
+  background: currentColor;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  transition: transform 0.35s cubic-bezier(0.69, -0.03, 0.24, 1.19);
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  transform-origin: right;
+  -webkit-transform-origin: right;
+}
+.header .menu ul li a:hover::after {
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+  transform-origin: left;
+  -webkit-transform-origin: left;
+}
+.header .menu ul li a:hover {
+  color: var(--cor-highlight);
+  font-weight: 700;
+}
+.header .dark-mode {
+  text-align: center;
+  flex-grow: 1;
+}
+.header .dark-mode button {
+  background: transparent;
+  border: none;
+  font-size: 1.2rem;
+  color: var(--cor-texto);
+  cursor: pointer;
+  transition: all 0.35s ease-in-out;
+}
+.header .dark-mode button:hover {
+  color: var(--cor-highlight);
+}
+.header .dark-mode li {
+  list-style: none;
 }
 
-.textoCard{
-    margin-left: 100px;
+main {
+  display: grid;
+  place-items: center;
+  padding-top: 4rem;
+}
+main hr {
+  width: 80%;
+  border: 1px solid rgba(133, 133, 133, 0.35);
+}
+main h2 {
+  margin-bottom: 4px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
-a.link{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 24px;
-    margin-right: 4px;
+.return-to-top {
+  position: fixed;
+  display: grid;
+  text-align: center;
+  bottom: 0;
+  margin-bottom: 6px;
+  z-index: 9999 !important;
+  opacity: 0.7;
+  cursor: pointer;
+  transition: all 0.5s;
 }
-a.link:hover{
-    color:  #334195;
-    cursor: pointer;
-    text-decoration: underline;
-    transition: .5s;
+.return-to-top:hover {
+  opacity: 1;
 }
-footer{
-    text-align: center;
-    color: rgb(255, 255, 255);
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 120px;
-    background-color: #334195;
-    border-top: 2px solid #45F0DF ;
+.return-to-top a {
+  font-size: 1.2rem;
+  color: var(--cor-texto);
+  text-decoration: none;
+  text-transform: uppercase;
 }
-
-.main{
-    display: flex;
-    justify-content: center;
-    place-items: center;
-    flex-direction: column;
+.return-to-top i {
+  font-size: 1.5rem;
 }
 
-.main p{
-    text-align: justify;
+.oculta {
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateX(-100%);
 }
 
-.sobre-mim{
-    max-width: 30%;
+.exibir {
+  opacity: 1 !important;
+  filter: blur(0);
+  transform: translateX(0) !important;
 }
+
+.contact-wrapper {
+  display: grid;
+  place-items: center;
+  width: 100%;
+}
+.contact-wrapper .contact {
+  width: 100%;
+}
+.contact-wrapper h2 {
+  text-align: center;
+}
+
+.card {
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 480px;
+  background: #bababa;
+}
+.card-text {
+  padding-left: 1rem;
+}
+.card-text p {
+  font-size: 1.1rem;
+}
+.card span {
+  font-size: 1.3rem;
+}
+.card a {
+  text-decoration: none;
+  color: var(--cor-texto);
+  padding-top: 1.5rem;
+  transition: color 0.5s;
+}
+.card a:hover {
+  color: var(--cor-highlight);
+}
+.card a i {
+  font-size: 1.6rem;
+}
+.card h1 {
+  font-size: 3rem;
+}
+.card i {
+  font-size: 14rem;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  place-items: center;
+  background-color: var(--bg-color2);
+  width: clamp(320px, 41.667vw, 50rem);
+  height: 28rem;
+  border-radius: 1rem;
+  overflow-x: hidden;
+  border-top-left-radius: 0;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+}
+.about a {
+  color: var(--cor-texto);
+  padding: 4rem;
+  font-size: 7rem;
+  border-radius: 50%;
+  transition: all 0.75s;
+}
+.about a:hover {
+  color: var(--cor-highlight);
+}
+.about .aviso {
+  display: none;
+}
+.about .modal {
+  position: absolute;
+  backdrop-filter: blur(5px);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
+}
+.about table {
+  background: var(--cor-texto);
+  margin-top: 1rem;
+}
+.about table th {
+  background: var(--bg-color2);
+}
+.about table tr {
+  background: var(--bg-color2);
+}
+.about table td {
+  padding: 0.9rem 0;
+}
+.about .picture {
+  position: relative;
+  background-image: url("img/cao.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: 4rem;
+  border-radius: 100%;
+  width: 150px;
+  height: 150px;
+}
+.about-header {
+  margin-top: 0.5rem;
+  text-align: center;
+}
+.about-header p {
+  white-space: normal;
+  word-wrap: break-word;
+}
+
+.about-wrapper {
+  position: relative;
+  width: fit-content;
+  height: 48rem;
+  display: grid;
+  place-items: center;
+}
+.about-wrapper .about-selector {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 6.9rem;
+  z-index: 999;
+}
+.about-wrapper .about-selector button {
+  background: var(--bg-color2);
+  color: var(--cor-texto);
+  padding: 1rem;
+  border: none;
+  width: clamp(70px, 6.771vw, 130px);
+  height: 50px;
+  outline: 0;
+  cursor: pointer;
+  transition: all 0.4s;
+  font-family: "Mulish";
+}
+.about-wrapper .about-selector button:hover {
+  background-color: var(--bg-color);
+  border: 1px solid var(--cor-texto);
+  font-size: 0.9rem;
+}
+.about-wrapper .about-selector button:nth-child(1) {
+  border-top-left-radius: 1rem;
+}
+.about-wrapper .about-selector button:nth-child(3) {
+  border-top-right-radius: 1rem;
+}
+
+.skills-wrapper {
+  padding-top: 4rem;
+  height: fit-content;
+  width: 100%;
+}
+.skills-wrapper h2 {
+  text-align: center;
+}
+.skills-wrapper .skills {
+  display: grid;
+  gap: 1rem;
+  place-items: center;
+  width: 100%;
+  height: fit-content;
+}
+.skills-wrapper .skills-card {
+  display: flex;
+  flex-direction: column;
+  background: var(--bg-color2);
+  width: 320px;
+  height: 320px;
+  border-radius: 2rem;
+  margin: 1%;
+  text-align: center;
+  justify-content: center;
+}
+.skills-wrapper .skills-card:nth-child(2) {
+  transition-delay: 200ms;
+}
+.skills-wrapper .skills-card:nth-child(3) {
+  transition-delay: 400ms;
+}
+.skills-wrapper .skills-card:nth-child(4) {
+  transition-delay: 600ms;
+}
+.skills-wrapper .skills-card:nth-child(5) {
+  transition-delay: 800ms;
+}
+.skills-wrapper .skills-card:nth-child(6) {
+  transition-delay: 1000ms;
+}
+.skills-wrapper .skills-card i {
+  font-size: 5rem;
+}
+.skills-wrapper .skills-card p {
+  padding-top: 2rem;
+  color: #bababa;
+}
+
+.portfolio-wrapper {
+  padding-top: 2.5rem;
+  height: fit-content;
+  width: 100%;
+}
+.portfolio-wrapper h2 {
+  text-align: center;
+}
+.portfolio-wrapper .portfolio {
+  display: grid;
+  gap: 1rem;
+  place-items: center;
+  width: 100%;
+  height: fit-content;
+}
+.portfolio-wrapper .portfolio-card {
+  display: flex;
+  flex-direction: column;
+  background: var(--bg-color2);
+  width: 320px;
+  height: 320px;
+  border-radius: 2rem;
+  margin: 1%;
+  text-align: center;
+  justify-content: center;
+}
+.portfolio-wrapper .portfolio-card:nth-child(2) {
+  transition-delay: 200ms;
+}
+.portfolio-wrapper .portfolio-card:nth-child(3) {
+  transition-delay: 400ms;
+}
+.portfolio-wrapper .portfolio-card:nth-child(4) {
+  transition-delay: 600ms;
+}
+.portfolio-wrapper .portfolio-card:nth-child(5) {
+  transition-delay: 800ms;
+}
+.portfolio-wrapper .portfolio-card:nth-child(6) {
+  transition-delay: 1000ms;
+}
+.portfolio-wrapper .portfolio-card i {
+  font-size: 5rem;
+}
+.portfolio-wrapper .portfolio-card a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1rem 1.5rem;
+  color: var(--cor-texto);
+  transition: color 0.5s;
+}
+.portfolio-wrapper .portfolio-card a:hover {
+  color: var(--cor-highlight);
+}
+.portfolio-wrapper .portfolio-card a i {
+  font-size: 1.5rem;
+}
+.portfolio-wrapper .portfolio-card p {
+  padding-top: 2rem;
+  color: #bababa;
+}
+
+footer {
+  background: var(--bg-color2);
+  width: 100%;
+  text-align: center;
+}
+
+@media (max-width: 1091px) {
+  .menu {
+    display: none;
+  }
+}
+@media (max-width: 1720px) {
+  .about table {
+    display: none;
+  }
+  .about .aviso {
+    display: block;
+  }
+}
+@media (max-width: 756px) {
+  .about-selector {
+    background-color: transparent;
+  }
+  .about-selector button {
+    background-color: transparent;
+  }
+}
+@media (max-width: 1669px) {
+  .about-selector button span {
+    display: none;
+  }
+}
+@media (min-width: 660px) {
+  .skills {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .portfolio {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+@media (min-width: 970px) {
+  .skills {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .portfolio {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+@media (prefers-reduced-motion) {
+  .oculta {
+    transition: none;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
