commit final pt2, ajustes na responsividade da aba de contato.

--- a/css/style.css
+++ b/css/style.css
@@ -486,5 +486,10 @@ footer {
     transition: none;
   }
 }
+@media (max-width: 500px) {
+  .card {
+    flex-direction: column;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
