--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,20 @@ body {
   color: var(--cor-highlight);
   font-weight: 700;
 }
+.header .responsive {
+  display: none;
+  background: transparent;
+  border: none;
+  font-size: 1.2rem;
+  color: var(--cor-texto);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  cursor: pointer;
+  transition: all 0.35s ease-in-out;
+}
+.header .responsive:hover {
+  color: var(--cor-highlight);
+}
 .header .dark-mode {
   text-align: center;
   flex-grow: 1;
@@ -234,15 +248,6 @@ main h2 {
 .about .aviso {
   display: none;
 }
-.about .modal {
-  position: absolute;
-  backdrop-filter: blur(5px);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 1px solid red;
-}
 .about table {
   background: var(--cor-texto);
   margin-top: 1rem;
@@ -258,12 +263,12 @@ main h2 {
 }
 .about .picture {
   position: relative;
-  background-image: url("img/cao.jpg");
+  background-image: url("img/1.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: 4rem;
-  border-radius: 100%;
+  border-radius: 36rem;
   width: 150px;
   height: 150px;
 }
@@ -484,6 +489,15 @@ footer {
 @media (prefers-reduced-motion) {
   .oculta {
     transition: none;
+  }
+}
+@media (max-width: 400px) {
+  .dark-mode {
+    display: none;
+  }
+
+  .header .responsive {
+    display: block;
   }
 }
 @media (max-width: 500px) {
